BTWCT-1187: Fixed banner and header alignments

--- a/waters-aem-frontend/src/styles/banner.scss
+++ b/waters-aem-frontend/src/styles/banner.scss
@@ -238,6 +238,10 @@
 
 .cmp-banner--header .cmp-banner {
     margin-top: -$space-l;
+
+    @include mobile {
+         margin-top: 0;
+    }
 }
 
 .cmp-banner--notHeader .cmp-banner {
